src/org/commoncrawl/rpc/compiler/generated/RPCCompiler.java
/* Generated By:JavaCC: Do not edit this line. RPCCompiler.java */
package org.commoncrawl.rpc.compiler.generated;

import java.io.File;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.io.IOException;
import java.util.ArrayList;
import java.util.HashSet;
import java.util.Hashtable;
import java.util.Set;

import org.commoncrawl.rpc.compiler.JBoolean;
import org.commoncrawl.rpc.compiler.JBuffer;
import org.commoncrawl.rpc.compiler.JByte;
import org.commoncrawl.rpc.compiler.JComparator;
import org.commoncrawl.rpc.compiler.JDouble;
import org.commoncrawl.rpc.compiler.JEnum;
import org.commoncrawl.rpc.compiler.JEnumValue;
import org.commoncrawl.rpc.compiler.JField;
import org.commoncrawl.rpc.compiler.JFile;
import org.commoncrawl.rpc.compiler.JFloat;
import org.commoncrawl.rpc.compiler.JInt;
import org.commoncrawl.rpc.compiler.JLong;
import org.commoncrawl.rpc.compiler.JMap;
import org.commoncrawl.rpc.compiler.JMethod;
import org.commoncrawl.rpc.compiler.JModule;
import org.commoncrawl.rpc.compiler.JRecord;
import org.commoncrawl.rpc.compiler.JService;
import org.commoncrawl.rpc.compiler.JString;
import org.commoncrawl.rpc.compiler.JType;
import org.commoncrawl.rpc.compiler.JVector;

public class RPCCompiler implements RPCCompilerConstants {
  private static String                      language     = "java";
  private static String                      destDir      = ".";
  private static ArrayList<String>           recFiles     = new ArrayList<String>();
  private static ArrayList<String>           cmdargs      = new ArrayList<String>();
  private static JFile                       curFile;
  private static Hashtable<String, JRecord>  recTab       = new Hashtable<String, JRecord>();
  private static Hashtable<String, JService> serviceTable = new Hashtable<String, JService>();
  private static String                      curMethod    = "";
  private static String                      curService   = "";
  private static String                      curParamType = "";
  private static String                      curDir       = ".";
  private static String                      curFileName;
  private static String                      curModuleName;

  public static void main(String[] args) {
    System.exit(driver(args));
  }

  public static void usage() {
    System.err.println("Usage: RPCCompiler --language [java] ddl-files");
  }

  public static int driver(String[] args) {
    for (int i = 0; i < args.length; i++) {
      if ("-l".equalsIgnoreCase(args[i])
          || "--language".equalsIgnoreCase(args[i])) {
        language = args[i + 1].toLowerCase();
        i++;
      } else if ("-d".equalsIgnoreCase(args[i])
          || "--destdir".equalsIgnoreCase(args[i])) {
        destDir = args[i + 1];
        i++;
      } else if (args[i].startsWith("-")) {
        String arg = args[i].substring(1);
        if (arg.startsWith("-")) {
          arg = arg.substring(1);
        }
        cmdargs.add(arg.toLowerCase());
      } else {
        recFiles.add(args[i]);
      }
    }
    if (recFiles.size() == 0) {
      usage();
      return 1;
    }
    for (int i = 0; i < recFiles.size(); i++) {
      curFileName = recFiles.get(i);
      File file = new File(curFileName);
      curDir = file.getParent();

      System.out.println("\n****PARSING FILE:" + file.toString() + "\n");
      try {
        FileReader reader = new FileReader(file);
        RPCCompiler parser = new RPCCompiler(reader);
        try {
          recTab = new Hashtable<String, JRecord>();
          curFile = parser.Input();
        } catch (ParseException e) {
          System.err.println(e.toString());
          return 1;
        }
        try {
          reader.close();
        } catch (IOException e) {
        }
      } catch (FileNotFoundException e) {
        System.err.println("File " + (String) recFiles.get(i) + " Not found.");
        return 1;
      }
      try {
        int retCode = curFile.genCode(language, destDir, cmdargs);
        if (retCode != 0) {
          return retCode;
        }
      } catch (IOException e) {
        System.err.println(e.toString());
        return 1;
      }
    }
    return 0;
  }

  final public JFile Input() throws ParseException {
    ArrayList<JFile> ilist = new ArrayList<JFile>();
    ArrayList<JRecord> rlist = new ArrayList<JRecord>();
    ArrayList<JService> serviceList = new ArrayList<JService>();
    JFile i;
    ArrayList<JRecord> l;
    JModule module;
    label_1: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case INCLUDE_TKN:
          i = Include();
          ilist.add(i);
          break;
        case MODULE_TKN:
          module = Module();
          rlist.addAll(module.getRecords());
          serviceList.addAll(module.getServices());
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
      }
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case MODULE_TKN:
        case INCLUDE_TKN:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
      }
    }
    jj_consume_token(0);
    {
      if (true)
        return new JFile(curFileName, ilist, rlist, serviceList);
    }
    throw new Error("Missing return statement in function");
  }

  final public JFile Include() throws ParseException {
    String fname;
    Token t;
    jj_consume_token(INCLUDE_TKN);
    t = jj_consume_token(CSTRING_TKN);
    JFile ret = null;
    fname = t.image.replaceAll("^\"", "").replaceAll("\"$", "");
    File file = new File(curDir, fname);
    String tmpDir = curDir;
    String tmpFile = curFileName;
    curDir = file.getParent();
    curFileName = file.getName();
    try {
      FileReader reader = new FileReader(file);
      RPCCompiler parser = new RPCCompiler(reader);
      try {
        ret = parser.Input();
        System.out.println(fname + " Parsed Successfully");
      } catch (ParseException e) {
        System.out.println(e.toString());
        System.exit(1);
      }
      try {
        reader.close();
      } catch (IOException e) {
      }
    } catch (FileNotFoundException e) {
      System.out.println("tmpDir is:" + tmpDir);
      System.out.println("File " + fname + " Not found. Path:"
          + file.getAbsolutePath());
      System.exit(1);
    }
    curDir = tmpDir;
    curFileName = tmpFile;
    {
      if (true)
        return ret;
    }
    throw new Error("Missing return statement in function");
  }

  final public JModule Module() throws ParseException {
    JModule module;
    String mName;
    JRecord record;
    JService service;
    jj_consume_token(MODULE_TKN);
    mName = ModuleName();
    System.out.println("Module Name:" + mName);
    curModuleName = mName;
    module = new JModule(mName);
    jj_consume_token(LBRACE_TKN);
    label_2: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case SERVICE_TKN:
        case RECORD_TKN:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
      }
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case SERVICE_TKN:
          service = Service();
          module.addService(service);
          break;
        case RECORD_TKN:
          record = Record();
          if (record != null)
            System.out.println("Record() returned:" + record.toString());
          else
            System.out.println("Record() returned NULL");

          module.addRecord(record);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
      }
    }
    jj_consume_token(RBRACE_TKN);
    {
      if (true)
        return module;
    }
    throw new Error("Missing return statement in function");
  }

  final public String ModuleName() throws ParseException {
    String name = "";
    Token t;
    t = jj_consume_token(IDENT_TKN);
    name += t.image;
    label_3: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case DOT_TKN:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
      }
      jj_consume_token(DOT_TKN);
      t = jj_consume_token(IDENT_TKN);
      name += "." + t.image;
    }
    {
      if (true)
        return name;
    }
    throw new Error("Missing return statement in function");
  }

  final public JService Service() throws ParseException {
    String name;
    ArrayList<JMethod> methodList = new ArrayList<JMethod>();
    Token t;
    JMethod m;
    jj_consume_token(SERVICE_TKN);
    t = jj_consume_token(IDENT_TKN);
    name = t.image;
    curService = name;
    jj_consume_token(LBRACE_TKN);
    label_4: while (true) {
      m = Method();
      methodList.add(m);
      jj_consume_token(SEMICOLON_TKN);
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case METHOD_TKN:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_4;
      }
    }
    jj_consume_token(RBRACE_TKN);
    String fqn = curModuleName + "." + name;
    JService service = new JService(fqn, methodList);
    serviceTable.put(fqn, service);
    {
      if (true)
        return service;
    }
    throw new Error("Missing return statement in function");
  }

  final public JMethod Method() throws ParseException {
    String inputType = null;
    String outputType = null;
    Token name;
    JRecord inputAnonymousRecord = null;
    JRecord outputAnonymousRecord = null;
    jj_consume_token(METHOD_TKN);
    name = jj_consume_token(IDENT_TKN);
    curMethod = name.toString();
    jj_consume_token(LPAREN_TKN);
    jj_consume_token(IN_TKN);
    curParamType = "input";
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case IDENT_TKN:
        inputType = ModuleName();
        break;
      case LBRACE_TKN:
        inputAnonymousRecord = AnonymousRecord();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
    jj_consume_token(COMMA_TKN);
    jj_consume_token(OUT_TKN);
    curParamType = "output";
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case IDENT_TKN:
        outputType = ModuleName();
        break;
      case LBRACE_TKN:
        outputAnonymousRecord = AnonymousRecord();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
    jj_consume_token(RPAREN_TKN);
    JRecord inputRecordType = null;
    JRecord outputRecordType = null;
    if (inputAnonymousRecord != null) {
      inputRecordType = inputAnonymousRecord;
    } else if (inputType.compareTo("NullMessage") != 0) {

      if (inputType.indexOf('.', 0) < 0) {
        inputType = curModuleName + "." + inputType;
      }

      inputRecordType = recTab.get(inputType);

      if (inputRecordType == null) {
        System.out.println("Input Param of Type " + inputType
            + " not known. Exiting.");
        System.exit(1);
      }
    }
    if (outputAnonymousRecord != null) {
      outputRecordType = outputAnonymousRecord;
    } else if (outputType.compareTo("NullMessage") != 0) {

      if (outputType.indexOf('.', 0) < 0) {
        outputType = curModuleName + "." + outputType;
      }

      outputRecordType = recTab.get(outputType);

      if (outputRecordType == null) {
        System.out.println("Output Param of Type " + outputType
            + " not known. Exiting.");
        System.exit(1);
      }
    }
    {
      if (true)
        return new JMethod(name.image, inputRecordType, outputRecordType);
    }
    throw new Error("Missing return statement in function");
  }

  final public Set<String> RecordModifiers() throws ParseException {
    String modifier;
    Set<String> modifiers = new HashSet<String>();
    jj_consume_token(47);
    modifier = RecordModifier();
    modifiers.add(modifier);
    label_5: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case COMMA_TKN:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
      }
      jj_consume_token(COMMA_TKN);
      modifier = RecordModifier();
      modifiers.add(modifier);
    }
    jj_consume_token(48);
    {
      if (true)
        return modifiers;
    }
    throw new Error("Missing return statement in function");
  }

  final public String RecordModifier() throws ParseException {
    Token modifier;
    modifier = jj_consume_token(IDENT_TKN);
    {
      if (true)
        return modifier.toString();
    }
    throw new Error("Missing return statement in function");
  }

  final public JRecord Record() throws ParseException {
    System.out.println("Entering Record Constructor");
    String rname;
    ArrayList<JField<JType>> flist = new ArrayList<JField<JType>>();
    ArrayList<JEnum> enumList = new ArrayList<JEnum>();
    ArrayList<JComparator> comparators = new ArrayList<JComparator>();
    Token t;
    JField<JType> f;
    JEnum e;
    JComparator c;
    Set<String> modifiers = null;
    jj_consume_token(RECORD_TKN);
    t = jj_consume_token(IDENT_TKN);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case 47:
        modifiers = RecordModifiers();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
    }
    rname = t.image;
    jj_consume_token(LBRACE_TKN);
    label_6: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case ENUM_TKN:
          e = Enumeration();
          enumList.add(e);
          break;
        case BYTE_TKN:
        case BOOLEAN_TKN:
        case INT_TKN:
        case LONG_TKN:
        case VINT_TKN:
        case VLONG_TKN:
        case FLOAT_TKN:
        case DOUBLE_TKN:
        case USTRING_TKN:
        case BUFFER_TKN:
        case VECTOR_TKN:
        case MAP_TKN:
        case IDENT_TKN:
        case 47:
          f = Field();
          jj_consume_token(SEMICOLON_TKN);
          flist.add(f);
          break;
        case COMPARATOR_TKN:
          c = Comparator();
          comparators.add(c);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
      }
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case ENUM_TKN:
        case COMPARATOR_TKN:
        case BYTE_TKN:
        case BOOLEAN_TKN:
        case INT_TKN:
        case LONG_TKN:
        case VINT_TKN:
        case VLONG_TKN:
        case FLOAT_TKN:
        case DOUBLE_TKN:
        case USTRING_TKN:
        case BUFFER_TKN:
        case VECTOR_TKN:
        case MAP_TKN:
        case IDENT_TKN:
        case 47:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_6;
      }
    }
    jj_consume_token(RBRACE_TKN);
    String fqn = curModuleName + "." + rname;
    System.out.println("fqn:" + fqn);
    JRecord r = new JRecord(fqn, flist, enumList, modifiers, comparators);
    recTab.put(fqn, r);
    {
      if (true)
        return r;
    }
    throw new Error("Missing return statement in function");
  }

  final public JRecord AnonymousRecord() throws ParseException {
    System.out.println("Entering AnonymousRecord Constructor");
    ArrayList<JField<JType>> flist = new ArrayList<JField<JType>>();
    Token t;
    JField<JType> f;
    Set<String> modifiers = null;
    jj_consume_token(LBRACE_TKN);
    label_7: while (true) {
      f = Field();
      jj_consume_token(SEMICOLON_TKN);
      flist.add(f);
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case BYTE_TKN:
        case BOOLEAN_TKN:
        case INT_TKN:
        case LONG_TKN:
        case VINT_TKN:
        case VLONG_TKN:
        case FLOAT_TKN:
        case DOUBLE_TKN:
        case USTRING_TKN:
        case BUFFER_TKN:
        case VECTOR_TKN:
        case MAP_TKN:
        case IDENT_TKN:
        case 47:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_7;
      }
    }
    jj_consume_token(RBRACE_TKN);
    String fqn = curMethod + "_" + curParamType;
    JRecord r = new JRecord(fqn, flist, null, null, null);
    {
      if (true)
        return r;
    }
    throw new Error("Missing return statement in function");
  }

  final public JComparator Comparator() throws ParseException {
    Token name;
    ArrayList<String> fieldNames = new ArrayList<String>();
    Token fieldName;
    jj_consume_token(COMPARATOR_TKN);
    name = jj_consume_token(IDENT_TKN);
    jj_consume_token(LBRACE_TKN);
    label_8: while (true) {
      fieldName = jj_consume_token(IDENT_TKN);
      jj_consume_token(SEMICOLON_TKN);
      fieldNames.add(fieldName.toString());
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case IDENT_TKN:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_8;
      }
    }
    jj_consume_token(RBRACE_TKN);
    {
      if (true)
        return new JComparator(name.toString(), fieldNames);
    }
    throw new Error("Missing return statement in function");
  }

  final public JEnum Enumeration() throws ParseException {
    Token name;
    ArrayList<JEnumValue> values = new ArrayList<JEnumValue>();
    JEnumValue v;
    jj_consume_token(ENUM_TKN);
    name = jj_consume_token(IDENT_TKN);
    jj_consume_token(LBRACE_TKN);
    label_9: while (true) {
      v = EnumerationValue();
      values.add(v);
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case IDENT_TKN:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_9;
      }
    }
    jj_consume_token(RBRACE_TKN);
    {
      if (true)
        return new JEnum(name.image, values);
    }
    throw new Error("Missing return statement in function");
  }

  final public JEnumValue EnumerationValue() throws ParseException {
    Token valueName;
    Token ordinal;
    valueName = jj_consume_token(IDENT_TKN);
    jj_consume_token(EQUALS_TKN);
    ordinal = jj_consume_token(INTEGER_TKN);
    jj_consume_token(SEMICOLON_TKN);
    {
      if (true)
        return new JEnumValue(valueName.image, Integer.parseInt(ordinal.image));
    }
    throw new Error("Missing return statement in function");
  }
